Update NetlfixScrapper to clarify variable name

--- a/Automaton/netflix_scrapper.ipynb
+++ b/Automaton/netflix_scrapper.ipynb
@@ -38,17 +38,17 @@
     "    cards = soup.find_all('section',{'class':'nm-collections-row'})\n",
     "    for card in cards:\n",
     "        title = card.find('h1').text\n",
-    "        temp_list = []\n",
+    "        movie_list = []\n",
     "        items = card.find_all('li')\n",
     "        movie_count = 1\n",
     "        for item in items:\n",
     "            heading = item.find('span',{'class':'nm-collections-title-name'}).text\n",
     "            movie_link = item.find('a').get('href')\n",
-    "            temp_list.append([movie_count, heading, movie_link])\n",
+    "            movie_list.append([movie_count, heading, movie_link])\n",
     "            movie_count += 1\n",
     "            \n",
     "        titles.append(title)\n",
-    "        content_details.append(temp_list)\n",
+    "        content_details.append(movie_list)\n",
     "        count += 1\n",
     "\n",
     "    for i in range(0, count-1):\n",
