Few changes and delete Netflix Scrapper

--- a/Automaton/ScrapNewsfromIndiaToday.ipynb
+++ b/Automaton/ScrapNewsfromIndiaToday.ipynb
@@ -19,7 +19,7 @@
    "outputs": [],
    "source": [
     "def make_soup(url):\n",
-    "    return(BeautifulSoup(requests.get(url).text, 'html.parser'))"
+    "    return BeautifulSoup(requests.get(url).text, 'html.parser')"
    ]
   },
   {
@@ -43,16 +43,15 @@
     "for story in top_stories:\n",
     "    image = story.find('img')['src']\n",
     "    title = story.find('a').text\n",
-    "    story_url = indiatoday + story.find('a')['href']\n",
+    "    story_soup = make_soup(indiatoday + story.find('a')['href'])\n",
     "    brief = story.find('p').text\n",
     "    \n",
     "    article = []\n",
-    "    for description in make_soup(story_url).find_all('div',{'class':'description'}):\n",
-    "        \n",
+    "    for description in story_soup.find_all('div',{'class':'description'}): \n",
     "        for paragraph in description.find_all('p'):\n",
     "            article.append(paragraph.text)\n",
     "\n",
-    "    articles_list.append([title, story_url, brief, article, image])"
+    "    articles_list.append([title, brief, article, image])"
    ]
   },
   {
@@ -61,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.DataFrame(articles_list, columns=['Title', 'Story Url', 'Brief Intro', 'Paragraph', 'Image Url'])"
+    "df = pd.DataFrame(articles_list, columns=['Title', 'Brief Intro', 'Paragraph', 'Image Url'])"
    ]
   }
  ],
