applied a data set and replaced the old file with new file with integrated data set

--- a/machine_learning/Decision_Tree.ipynb
+++ b/machine_learning/Decision_Tree.ipynb
@@ -224,7 +224,141 @@
     "        #Calculate the accuracy of the model\n",
     "        return np.mean(y_test==y_pred)*100\n",
     "    \n",
-    "    "
+    "    \n",
+    "    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Importing libraries\n",
+    "import numpy as np\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Importing data set\n",
+    "from sklearn.datasets import load_breast_cancer\n",
+    "data = load_breast_cancer()\n",
+    "\n",
+    "\n",
+    "X=data['data']\n",
+    "Y=data['target']\n",
+    "Y=np.reshape(Y,(Y.shape[0],1))\n",
+    "X=X[:,:5]\n",
+    "X=np.append(X,Y,axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Separating training set and test set\n",
+    "sz = len(X)//4\n",
+    "X_test=X[:sz,:]\n",
+    "X_train=X[sz:,:]   #X_train already contains Y_train as its last column so no need to define it separately\n",
+    "Y_test=X_test[:,-1]\n",
+    "n=X.shape[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Training the algorithm\n",
+    "train=D_TREE()\n",
+    "train.fit(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Predictions on test data\n",
+    "y_pred=train.pred(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1.0: '100.0%'}\n",
+      "{0.0: '100.0%'}\n",
+      "{0.0: '100.0%'}\n",
+      "{1.0: '100.0%'}\n",
+      "{0.0: '100.0%'}\n",
+      "{1.0: '100.0%'}\n",
+      "{0.0: '100.0%'}\n",
+      "{0.0: '100.0%'}\n",
+      "{0.0: '100.0%'}\n",
+      "{1.0: '100.0%'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#A few predictions\n",
+    "for i in range(10):\n",
+    "    train.print_leaf(train.check_testing_data(X_test[i],train.my_tree))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of my model :  80.28169014084507 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Accuracy of my model : \",train.accuracy(Y_test,y_pred),\"%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy of sklearn model =  80.28169014084507 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "#calculating accuracy using sklearn model\n",
+    "from sklearn import tree\n",
+    "clf = tree.DecisionTreeClassifier()\n",
+    "clf = clf.fit(X_train[:,0:n-1], Y_train)\n",
+    "y_pred=clf.predict(X_test[:,:n-1])\n",
+    "error=(y_pred==Y_test.flatten())\n",
+    "print(\"accuracy of sklearn model = \",np.mean(error)*100,\"%\")"
    ]
   }
  ],
@@ -248,5 +382,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 2
 }
