Added Documentation for ARIMA

--- a/machine_learning/ARIMA/ARIMA with pyramid.ipynb
+++ b/machine_learning/ARIMA/ARIMA with pyramid.ipynb
@@ -5,10 +5,9 @@
    "metadata": {},
    "source": [
     "# ARIMA with pyramid\n",
-    "This notebook shows how to use the ARIMA-algorithm for forecasting univariate time series.\n",
+    "This notebook shows how to use the ARIMA-algorithm for forecasting univariate time series. To make things simple the [Pyramid Library](https://github.com/alkaline-ml/pmdarima) is used.\n",
     "\n",
-    "In case you do not know ARIMA, have a quick look on the [wikipedia article](https://en.wikipedia.org/wiki/Autoregressive_integrated_moving_average).\n",
-    "To make things simple the [Pyramid Library](https://github.com/alkaline-ml/pmdarima) is used."
+    "In case you do not know ARIMA, have a quick look on the [wikipedia article](https://en.wikipedia.org/wiki/Autoregressive_integrated_moving_average)."
    ]
   },
   {
@@ -100,7 +99,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fit the model an create forecasts"
+    "## Fit the model an create forecasts\n",
+    "\n",
+    "The `auto_arima` method of pyramid automatically fits the ARIMA model.\n",
+    "Within this function multiple parameters can be specified for the seasonality:\n",
+    "- seasonal: boolean variable that indicates that the values of the time series are repeated with a defined frequency.\n",
+    "- m: this value defines the frequency, so how many data points occur per year/per season. In this case 12 is needed, as the average temperatures per month are used."
    ]
   },
   {
@@ -121,10 +125,141 @@
     "# Measure the execution time of the model fitting\n",
     "\n",
     "# Fit model\n",
-    "model = pm.auto_arima(train, seasonal=True, m=12)\n",
-    "\n",
+    "model = pm.auto_arima(train, seasonal=True, m=12)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With `model.summary()` you can get an insight into the fitted model and see what parameters were calculated by the `auto_arima` function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>SARIMAX Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>                   <td>y</td>                <th>  No. Observations:  </th>   <td>1200</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model:</th>           <td>SARIMAX(1, 0, 0)x(1, 0, [1], 12)</td> <th>  Log Likelihood     </th> <td>-322.446</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>                    <td>Sun, 25 Oct 2020</td>         <th>  AIC                </th>  <td>654.892</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>                        <td>20:45:43</td>             <th>  BIC                </th>  <td>680.343</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Sample:</th>                          <td>0</td>                <th>  HQIC               </th>  <td>664.479</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th></th>                              <td> - 1200</td>             <th>                     </th>     <td> </td>   \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Covariance Type:</th>                <td>opg</td>               <th>                     </th>     <td> </td>   \n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "      <td></td>         <th>coef</th>     <th>std err</th>      <th>z</th>      <th>P>|z|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>intercept</th> <td>    0.0009</td> <td>    0.000</td> <td>    3.227</td> <td> 0.001</td> <td>    0.000</td> <td>    0.002</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>ar.L1</th>     <td>    0.4255</td> <td>    0.024</td> <td>   17.702</td> <td> 0.000</td> <td>    0.378</td> <td>    0.473</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>ar.S.L12</th>  <td>    0.9998</td> <td> 6.48e-05</td> <td> 1.54e+04</td> <td> 0.000</td> <td>    1.000</td> <td>    1.000</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>ma.S.L12</th>  <td>   -0.8718</td> <td>    0.014</td> <td>  -60.383</td> <td> 0.000</td> <td>   -0.900</td> <td>   -0.843</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>sigma2</th>    <td>    0.0948</td> <td>    0.003</td> <td>   31.491</td> <td> 0.000</td> <td>    0.089</td> <td>    0.101</td>\n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "  <th>Ljung-Box (Q):</th>          <td>78.72</td> <th>  Jarque-Bera (JB):  </th> <td>96.69</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Prob(Q):</th>                <td>0.00</td>  <th>  Prob(JB):          </th> <td>0.00</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Heteroskedasticity (H):</th> <td>0.99</td>  <th>  Skew:              </th> <td>-0.08</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Prob(H) (two-sided):</th>    <td>0.91</td>  <th>  Kurtosis:          </th> <td>4.38</td> \n",
+       "</tr>\n",
+       "</table><br/><br/>Warnings:<br/>[1] Covariance matrix calculated using the outer product of gradients (complex-step)."
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                                      SARIMAX Results                                       \n",
+       "============================================================================================\n",
+       "Dep. Variable:                                    y   No. Observations:                 1200\n",
+       "Model:             SARIMAX(1, 0, 0)x(1, 0, [1], 12)   Log Likelihood                -322.446\n",
+       "Date:                              Sun, 25 Oct 2020   AIC                            654.892\n",
+       "Time:                                      20:45:43   BIC                            680.343\n",
+       "Sample:                                           0   HQIC                           664.479\n",
+       "                                             - 1200                                         \n",
+       "Covariance Type:                                opg                                         \n",
+       "==============================================================================\n",
+       "                 coef    std err          z      P>|z|      [0.025      0.975]\n",
+       "------------------------------------------------------------------------------\n",
+       "intercept      0.0009      0.000      3.227      0.001       0.000       0.002\n",
+       "ar.L1          0.4255      0.024     17.702      0.000       0.378       0.473\n",
+       "ar.S.L12       0.9998   6.48e-05   1.54e+04      0.000       1.000       1.000\n",
+       "ma.S.L12      -0.8718      0.014    -60.383      0.000      -0.900      -0.843\n",
+       "sigma2         0.0948      0.003     31.491      0.000       0.089       0.101\n",
+       "===================================================================================\n",
+       "Ljung-Box (Q):                       78.72   Jarque-Bera (JB):                96.69\n",
+       "Prob(Q):                              0.00   Prob(JB):                         0.00\n",
+       "Heteroskedasticity (H):               0.99   Skew:                            -0.08\n",
+       "Prob(H) (two-sided):                  0.91   Kurtosis:                         4.38\n",
+       "===================================================================================\n",
+       "\n",
+       "Warnings:\n",
+       "[1] Covariance matrix calculated using the outer product of gradients (complex-step).\n",
+       "\"\"\""
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create Forecasts\n",
+    "With the fitted model, future datapoints can be predicted.\n",
+    "In this case, the amount of test datapoints is predicted, so that later the test data can be compared with the prediction."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Create forecasts\n",
-    "forecasts = model.predict(test.shape[0])  # predict N steps into the future"
+    "forecasts = model.predict(test.shape[0])"
    ]
   },
   {
@@ -136,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -184,6 +319,17 @@
     "plt.plot(x, test, c='green', alpha=0.5)\n",
     "plt.plot(x, forecasts, c='blue', alpha=0.5)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "\n",
+    "The last figure demonstrates, how the forecasts and the real (test) values compare to each other.\n",
+    "\n",
+    "Overall ARIMA's prediction seems to be quite appropriate. Only the temperature peaks in summer are not predicted as well. "
    ]
   },
   {
