Add documentation for Logistic_Regression

--- a/neural_network/Logistic_Regression.ipynb
+++ b/neural_network/Logistic_Regression.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Logistic_Regression_Algorithm_Jupyter.ipynb",
+      "name": "Logistic_Regression.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
@@ -27,12 +27,24 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7lnfVxLRUWVJ"
+      },
+      "source": [
+        "### Importing the MNIST Dataset to perform Multi-Class Classification.\n",
+        "\n",
+        " MNIST is a large database of handwritten digits that is commonly used for training various image processing systems.\n",
+        "\n",
+        "[More Information in Wikipedia](https://en.wikipedia.org/wiki/MNIST_database)"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "EfVLE_QFOTqZ"
       },
       "source": [
-        "### Importing the MNIST Dataset to perform Multi-Class Classification.\n",
         "from sklearn.datasets import fetch_openml\n",
         "X, y = fetch_openml('mnist_784', return_X_y=True)"
       ],
@@ -40,17 +52,25 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2_bW4AE3VlXI"
+      },
+      "source": [
+        "### Shape of the dataset"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "1gT6BisBPSaa",
-        "outputId": "e7ae5f7c-4291-4b4b-ba4c-86dc67163674",
+        "outputId": "edc55b8c-6f7f-4aa2-9e73-f9ade280ff1b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         }
       },
       "source": [
-        "### Shape of the dataset\n",
         "X.shape"
       ],
       "execution_count": 3,
@@ -70,20 +90,28 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Iyllwdh6VwNi"
+      },
+      "source": [
+        "### Visualizing the first 5 images in the dataset\n",
+        "We are reshaping the each array as a 28X28 Image so that we can plot it"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "kSE_BTLROuc6",
-        "outputId": "3bcfdeef-7482-4ba1-f645-ad2fb331a292",
+        "outputId": "b4273e3f-ada8-40bb-9cc5-e09086b83ec9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         }
       },
       "source": [
-        "### Visualizing the first 5 images in the dataset\n",
         "import matplotlib.pyplot as plt\n",
         "for i in range(5):\n",
-        "    # Here, we are reshaping the array as a 28X28 Image so that we can plot the image.\n",
         "    plt.imshow(X[i].reshape((28,28)))\n",
         "    plt.show()"
       ],
@@ -157,40 +185,59 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pykhAfmSV-Pj"
+      },
+      "source": [
+        "## Importing the Logistic Regression Model from Scikit-Learn and Data Processing\n",
+        "1. We are decreasing the size of the dataset for training.\n",
+        "2. Then, we scale the data.\n",
+        "3. Finally, we split the dataset into training and test sets"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "xdkrb42NREk_"
       },
       "source": [
-        "## Importing the Logistic Regression Model from Sklearn\n",
         "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn import preprocessing\n",
         "\n",
-        "## Decreasing the size of the dataset\n",
+        "# STEP 1\n",
         "X, y = X[:10_000], y[:10_000]\n",
         "\n",
-        "## Scaling the data\n",
+        "# STEP 2\n",
         "X_scaled = preprocessing.scale(X)\n",
         "\n",
-        "## Splitting the dataset into training and testing sets\n",
+        "# STEP 3\n",
         "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y, random_state = 42)"
       ],
       "execution_count": 5,
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "67lvYLhpWlae"
+      },
+      "source": [
+        "## Then, we finally train the Logistic Regression Model."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "KcF8NimlRJ6D",
-        "outputId": "102b1c12-14eb-4bbd-92cd-e427fa50ff2d",
+        "outputId": "6d53c5aa-6f9b-493b-aa33-af2834bdd074",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         }
       },
       "source": [
-        "## Model Training\n",
         "model = LogisticRegression(random_state=0, max_iter=2000)\n",
         "model.fit(X_train, y_train)\n",
         "print(\"Model Training Completed!\")"
@@ -207,10 +254,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-7oR9y0LWxJi"
+      },
+      "source": [
+        "### We now measuring the accuracy score of the model that we have trained."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "7_bzupDURJ8K",
-        "outputId": "cee4219e-d7ee-43ba-9387-a975e6f444cf",
+        "outputId": "22cc5fad-d5cf-402b-9ad0-2e43048ccf77",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -222,7 +278,7 @@
         "score = accuracy_score(y_test, preds) \n",
         "print(f\"Model's accuracy score is : {round(score*100, 2)} %\")"
       ],
-      "execution_count": 22,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -234,18 +290,25 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qn72FRPmXFxM"
+      },
+      "source": [
+        "### Demonstrating the model's predictions on one of the image from our test-set."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "hx73JlHWRJ-4",
-        "outputId": "e1633d86-38d0-4a1f-cafc-b944e62a73a5",
+        "outputId": "3f0d7f4d-8cb7-44c9-b0f3-77436246d035",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 299
         }
       },
       "source": [
-        "## Demostrating the model's predictions\n",
-        "\n",
         "pred = model.predict(X_test[45].reshape(-1, 784))\n",
         "print(f\"Model's Prediction : {pred}\")\n",
         "print(\"*\"*30)\n",
@@ -253,7 +316,7 @@
         "plt.imshow(X_test[45].reshape(28, 28))\n",
         "plt.show()"
       ],
-      "execution_count": 23,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -286,7 +349,7 @@
       "source": [
         ""
       ],
-      "execution_count": 18,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -297,7 +360,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     }
   ]
