added resources link

--- a/neural_network/RNN/rnn.py.ipynb
+++ b/neural_network/RNN/rnn.py.ipynb
@@ -13,6 +13,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "revolutionary-houston",
+   "metadata": {},
+   "source": [
+    "## Resources\n",
+    "\n",
+    "- RNN-LSTM : https://colah.github.io/posts/2015-08-Understanding-LSTMs/\n",
+    "- LSTM : https://en.wikipedia.org/wiki/Long_short-term_memory"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "champion-dimension",
    "metadata": {},
    "source": [
@@ -407,13 +418,7 @@
       "73/73 [==============================] - 13s 178ms/step - loss: 0.0012\n",
       "Epoch 97/100\n",
       "73/73 [==============================] - 12s 163ms/step - loss: 0.0014\n",
-      "Epoch 98/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 98/100\n",
       "73/73 [==============================] - 12s 163ms/step - loss: 0.0013\n",
       "Epoch 99/100\n",
       "73/73 [==============================] - 12s 163ms/step - loss: 0.0013\n",
