--- a/Automaton/Netflix_Scraper.ipynb
+++ b/Automaton/Netflix_Scraper.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Netflix Scrapper\n",
+    "### Netflix Scraper\n",
     "\n",
     "The purpose of the code is to get details of all the Categories on Netflix and then to gather information about Sub-Categories and movies under each Sub-Category."
    ]
